--- a/qdrant-landing/themes/qdrant/layouts/partials/css.html
+++ b/qdrant-landing/themes/qdrant/layouts/partials/css.html
@@ -27,3 +27,9 @@
 {{ if eq .Section "documentation" }}
 <link rel="stylesheet" href="/css/qdr-search.min.css">
 {{ end }}
+
+{{ if eq .Section "blog" }}
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,100;1,400;1,500;1,700&display=swap" rel="stylesheet">
+{{ end }}
