--- a/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
@@ -1,41 +1,31 @@
 @use '../variables' as var;
+@use '../mixins/mixins' as mixins;
 
 $blog-font-family: var.$blog-font-family;
+$blog-text-color: var.$blog-text-color;
 
 .qdrant-blog {
-  // todo: move
-  @import url('https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@200;300&family=Roboto:ital,wght@0,100;0,400;0,500;0,700;1,100;1,400;1,500;1,700&display=swap');
+  font-family: $blog-font-family;
 
   &__header {
     margin-bottom: 2.5rem;
-
-    color: var(--neutral-n-800, #102252);
-
-    font-family: $blog-font-family;
-    font-size: 2.5rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 3rem; /* 120% */
+    @include mixins.blog-font-styles(2.5rem, 700, 3rem, $blog-text-color);
 
     @include media-breakpoint-up(md) {
+      margin-bottom: 3.94rem;
       font-size: 4.5rem;
       line-height: 5.375rem;
     }
   }
 
   &__subheader {
-    color: var(--neutral-n-800, #102252);
     margin-bottom: 1.5rem;
+    color: var(--neutral-n-800, #102252);
+    @include mixins.blog-font-styles(2.5rem, 700, 3rem, $blog-text-color);
 
     @include media-breakpoint-up(md) {
       margin-bottom: 0;
     }
-
-    font-family: $blog-font-family;
-    font-size: 2.5rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 3rem; /* 120% */
   }
 
   &__search {
@@ -56,12 +46,7 @@ $blog-font-family: var.$blog-font-family;
 
       &::placeholder {
         color: var(--neutral-n-300, #8B9CCC);
-
-        font-family: $blog-font-family;
-        font-size: 1rem;
-        font-style: normal;
-        font-weight: 400;
-        line-height: 1.5rem; /* 150% */
+        @include mixins.blog-font-styles(1rem, 400, 1.5rem, $blog-text-color);
       }
     }
 
@@ -88,7 +73,6 @@ $blog-font-family: var.$blog-font-family;
 
   &__post {
   }
-
 }
 
 .qb-card {
@@ -116,13 +100,7 @@ $blog-font-family: var.$blog-font-family;
 
   &__title {
     color: var(--neutral-n-800, #102252);
-
-    /* H/H24 */
-    font-family: $blog-font-family;
-    font-size: 1.5rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 2rem; /* 133.333% */
+    @include mixins.blog-font-styles(1.5rem, 700, 2rem, $blog-text-color);
     margin-bottom: 0.79rem;
   }
 
@@ -132,25 +110,13 @@ $blog-font-family: var.$blog-font-family;
     text-overflow: ellipsis;
     white-space: nowrap;
 
-    /* P/P16 */
-    font-family: $blog-font-family;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.5rem; /* 150% */
-
+    @include mixins.blog-font-styles(1rem, 400, 1.5rem, $blog-text-color);
     margin-bottom: 0.79rem;
   }
 
   &__meta {
     color: var(--neutral-n-500, #4B6A9B);
-
-    /* P/P14 */
-    font-family: $blog-font-family;
-    font-size: 0.875rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.25rem; /* 143% */
+    @include mixins.blog-font-styles(0.875rem, 400, 1.25rem, $blog-text-color);
   }
 
   &__meta-divider {
@@ -164,8 +130,6 @@ $blog-font-family: var.$blog-font-family;
     }
   }
 
-
-  //
   &_border-bottom {
     padding-bottom: 1.25rem;
     border-bottom: 1px solid var(--neutral-n-200, #AEBDE5);
@@ -174,6 +138,7 @@ $blog-font-family: var.$blog-font-family;
 
 .qb-post {
   padding-bottom: 4rem;
+
   @include media-breakpoint-up(md) {
     padding-bottom: 10rem;
   }
@@ -183,14 +148,9 @@ $blog-font-family: var.$blog-font-family;
     margin-bottom: 1rem;
     text-align: center;
     color: var(--neutral-n-800, #102252);
-    font-family: $blog-font-family;
-    font-size: 2rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 2.5rem; /* 125% */
+    @include mixins.blog-font-styles(2rem, 700, 2.5rem, $blog-text-color);
 
     @include media-breakpoint-up(md) {
-      color: var(--neutral-n-800, #102252);
       font-size: 3.5rem;
       line-height: 4rem;
     }
@@ -215,12 +175,7 @@ $blog-font-family: var.$blog-font-family;
     margin-bottom: 2.5rem;
     color: var(--neutral-n-600, #39508F);
 
-    /* P/P14 */
-    font-family: $blog-font-family;
-    font-size: 0.875rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.3125rem; /* 150% */
+    @include mixins.blog-font-styles(0.875rem, 400, 1.3125rem, $blog-text-color);
   }
 
   &__meta-divider {
@@ -234,11 +189,7 @@ $blog-font-family: var.$blog-font-family;
     flex: 1 0 0;
     color: var(--neutral-n-700, #1F3266);
 
-    font-family: $blog-font-family;
-    font-size: 1.125rem;
-    font-style: normal;
-    font-weight: 400;
-    line-height: 1.6875rem; /* 150% */
+    @include mixins.blog-font-styles(1.125rem, 400, 1.6875rem, $blog-text-color);
 
     a {
       color: var(--Primary, #DC244C);
@@ -265,14 +216,7 @@ $blog-font-family: var.$blog-font-family;
     padding-bottom: 0.5rem;
     border-bottom: 1px solid var(--Primary, #DC244C);
 
-    color: var(--neutral-n-800, #102252);
-
-    /* P/P18-Semibold */
-    font-family: $blog-font-family;
-    font-size: 1.125rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 1.6875rem; /* 150% */
+    @include mixins.blog-font-styles(1.125rem, 600, 1.6875rem, $blog-text-color);
 
     @include media-breakpoint-up(md) {
       margin-bottom: 1.5rem;
@@ -288,13 +232,14 @@ $blog-font-family: var.$blog-font-family;
       align-items: center;
     }
   }
+
   &__link {
     display: inline-block;
+
     &:not(:first-of-type) {
       margin-left: 2rem;
-    }
-    @include media-breakpoint-up(md) {
-      &:not(:first-of-type) {
+
+      @include media-breakpoint-up(md) {
         margin-left: 0;
         margin-top: 2rem;
       }
@@ -323,23 +268,15 @@ $blog-font-family: var.$blog-font-family;
   &__title {
     color: var(--neutral-n-800, #102252);
 
-    /* H/H32 */
-    font-family: $blog-font-family;
-    font-size: 2rem;
-    font-style: normal;
-    font-weight: 700;
-    line-height: 2.5rem; /* 125% */
+    @include mixins.blog-font-styles(2rem, 700, 2.5rem, $blog-text-color);
   }
 
   &__link {
     display: flex;
     align-items: center;
     color: var(--neutral-n-700, #1F3266);
-    font-family: $blog-font-family;
-    font-size: 1rem;
-    font-style: normal;
-    font-weight: 600;
-    line-height: 1.5rem; /* 150% */
+
+    @include mixins.blog-font-styles(1rem, 600, 1.5rem, $blog-text-color);
 
     & > i {
       display: flex;
