--- a/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
@@ -7,17 +7,6 @@ $blog-text-color: var.$blog-text-color;
 .qdrant-blog {
   font-family: $blog-font-family;
 
-  &__header {
-    margin-bottom: 2.5rem;
-    @include mixins.blog-font-styles(2.5rem, 700, 3rem, $blog-text-color);
-
-    @include media-breakpoint-up(md) {
-      margin-bottom: 3.94rem;
-      font-size: 4.5rem;
-      line-height: 5.375rem;
-    }
-  }
-
   &__subheader {
     margin-bottom: 1.5rem;
     color: var(--neutral-n-800, #102252);
@@ -67,11 +56,32 @@ $blog-text-color: var.$blog-text-color;
       margin-bottom: 5rem;
     }
   }
+}
 
-  &__card {
+.qb-hero {
+  margin-top: -5.25rem;
+  padding-top: 5.25rem;
+  padding-bottom: 2.5rem;
+  background: var(--neutral-n-50, #F2F6FF);
+
+  &__breadcrumbs {
+    padding-top: 1.5rem;
+    @include media-breakpoint-up(md) {
+      padding-top: 2.5rem;
+    }
   }
 
-  &__post {
+  &__header {
+    display: inline-block;
+    @include mixins.blog-font-styles(2.5rem, 700, 3rem, $blog-text-color);
+    font-size: 2.5rem !important; // because of responsive.scss
+    margin-bottom: 2.5rem;
+
+    @include media-breakpoint-up(md) {
+      margin-bottom: 3.94rem;
+      font-size: 4.5rem !important; // because of responsive.scss
+      line-height: 5.375rem;
+    }
   }
 }
 
