--- a/qdrant-landing/themes/qdrant/layouts/blog/list.html
+++ b/qdrant-landing/themes/qdrant/layouts/blog/list.html
@@ -3,9 +3,8 @@
 <section class="qb-hero">
     <div class="auto-container">
         <div class="row">
-            <div class="qb-hero__breadcrumbs col-12{{ if .Params.img }} col-md-8{{ end }} order-1 order-md-0">
-                {{ partial "breadcrumbs" . }}
-
+            <div class="col-12{{ if .Params.img }} col-md-8{{ end }} order-1 order-md-0">
+                <div class="qb-hero__breadcrumbs">{{ partial "breadcrumbs" . }}</div>
                 <h1 class="qb-hero__header"> {{ .Params.title | safeHTML }}</h1>
             </div>
         </div>
