--- a/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
@@ -64,6 +64,12 @@ $blog-text-color: var.$blog-text-color;
   padding-bottom: 2.5rem;
   background: var(--neutral-n-50, #F2F6FF);
 
+  @include media-breakpoint-up(md) {
+    margin-top: 0;
+    padding-top: 5rem;
+    padding-bottom: 5rem;
+  }
+
   &__breadcrumbs {
     padding-top: 1.5rem;
     @include media-breakpoint-up(md) {
@@ -72,7 +78,7 @@ $blog-text-color: var.$blog-text-color;
     & > .breadcrumbs {
       margin-bottom: 1rem;
       @include media-breakpoint-up(md) {
-        margin-bottom: 2.5rem;
+        margin-bottom: 1.2rem;
       }
     }
   }
