--- a/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
+++ b/qdrant-landing/themes/qdrant/static/css/blocks/_qdrant-blog.scss
@@ -8,7 +8,10 @@ $blog-text-color: var.$blog-text-color;
   font-family: $blog-font-family;
 
   &__content {
-    padding-bottom: 7.5rem;
+    padding-bottom: 0.8rem;
+    @include media-breakpoint-up(md) {
+      padding-bottom: 7.5rem;
+    }
   }
 
   &__subheader {
@@ -58,7 +61,6 @@ $blog-text-color: var.$blog-text-color;
 
   &__featured {
     min-height: 33rem;
-    margin-bottom: 3.17rem;
 
     @include media-breakpoint-up(md) {
       margin-bottom: 5rem;
